--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <img src="game-logo.png" alt="Hand-drwan tic tac toe game work" />
+      <h1>Tic-Tac-Toe</h1>
     </header>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
